--- a/PokerPlanningDev/Pages/Error.cshtml
+++ b/PokerPlanningDev/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PokerPlanningDev.Components.Pages.ErrorModel
+@model PokerPlanningDev.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
