--- a/PokerPlanningDev/wwwroot/css/site.css
+++ b/PokerPlanningDev/wwwroot/css/site.css
@@ -66,3 +66,10 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+    
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
