--- a/PokerPlanningDev/Pages/Room/Components/PlayerDialog/PlayerDialog.razor
+++ b/PokerPlanningDev/Pages/Room/Components/PlayerDialog/PlayerDialog.razor
@@ -1,10 +1,10 @@
-﻿@inherits ParticipantDialogBase
+﻿@inherits PlayerDialogBase
 
 <MudDialog>
     <DialogContent>
         <MudTextField @bind-Value="@ParticipantName" Label="Seu Nome" Variant="@Variant.Outlined"></MudTextField>
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Primary" OnClick="@Submit">Ok</MudButton>
+        <MudButton Size="Size.Large" Color="Color.Primary" OnClick="@Submit">Confirmar</MudButton>
     </DialogActions>
 </MudDialog>
