--- a/PokerPlanningDev/Pages/Home/Home.razor.css
+++ b/PokerPlanningDev/Pages/Home/Home.razor.css
@@ -62,3 +62,29 @@
     bottom: 1rem;
     right: 1rem;
 }
+
+@media screen and (max-width: 1280px) {
+    .home-main {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .home-form {
+        width: 50%;
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .home-form {
+        width: 90%;
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .home-form {
+        width: 95%;
+        margin-left: 0;
+    }
+}
