--- a/PokerPlanningDev/Pages/_Host.cshtml
+++ b/PokerPlanningDev/Pages/_Host.cshtml
@@ -33,7 +33,14 @@
     <a class="dismiss">🗙</a>
 </div>
 
-<script src="_framework/blazor.server.js"></script>
+<script src="_framework/blazor.server.js" autostart="false"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+<script >
+    Blazor.start().then(() => {
+        Blazor.defaultReconnectionHandler._reconnectCallback = function (d) {
+            document.location.reload();
+        }
+    });
+</script>
 </body>
 </html>
